fixed vertical overflow for hero area and footer

--- a/portfolio/src/components/Footer.module.css
+++ b/portfolio/src/components/Footer.module.css
@@ -1,10 +1,11 @@
 .footer {
   background-image: url("../assets/backgorundWavesExit.svg");
   background-repeat: no-repeat;
-  background-position: cover;
+  background-position: top;
   background-size: cover;
-  height: 100vh;
+  height: fit-content;
   width: 100%;
+  padding-top: 310px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,7 +14,7 @@
 .copyright {
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: #001b2f8e;
+  background-color: #001b2f;
   text-align: center;
   width: 100%;
 }
@@ -28,6 +29,7 @@
   width: 100%;
   height: 50px;
   padding-top: 30px;
+  padding-bottom: 20pxnpm;
 }
 
 a {
