--- a/portfolio/src/components/HeroArea.module.css
+++ b/portfolio/src/components/HeroArea.module.css
@@ -1,18 +1,19 @@
 .heroArea {
   text-align: left;
   width: 100%;
-  height: 100vh;
-  padding-top: 25vh;
+  height: fit-content;
+  padding-bottom: 500px;
+  padding-top: 100px;
   background-image: url("../assets/heroBackground.svg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom;
   background-size: cover;
 }
 
 .heroTextContainer {
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .heroTextContainer h1 {
